<resources>
    <string name="app_name">BookStore</string>
    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!--Data for the dummy book entry-->
    <string name="Neverland">Neverland</string>
    <string name="neverland_price">15</string>
    <string name="neverland_quantity">12</string>
    <string name="neverland_supplier_name">AB Books</string>
    <string name="neverland_supplier_phone_nr">55501502</string>
    <string name="neverland_author">Peter Pan</string>
    <!--EditorActivity labels-->
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <!--Log warnings-->
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <!--Dialogs buttons labels-->
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="keep_editing">Keep editing</string>
    <!--Dialogs messages-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <!--Menu labels-->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all_books">Delete all books</string>
    <!--EditText Hints-->
    <string name="hint_supplier_phone_nr">00 000 000</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="values_euro">€</string>
    <string name="hint_price">0.0</string>
    <string name="hint_0">0</string>
    <string name="hint_book_name">Book Name</string>
    <string name="hint_author">Author</string>
    <!--Buttons increment/decrement labels-->
    <string name="button_increment">+</string>
    <string name="button_decrement">-</string>
    <!--content descriptions-->
    <string name="app_logo">app logo</string>
    <!--EmptyView message-->
    <string name="empty_view_argh">AAARGH!</string>
    <string name="empty_view_warning_message">It seems there are no books available…\n</string>
    <string name="empty_view_instructions">To insert a new book:\n\n1. Click on the + button\n2. Fill all the fields\n3. Click on the save button</string>
    <!--EditorActivity labels-->
    <string name="label_available">Available:</string>
    <string name="label_title">Title</string>
    <string name="label_author">Author</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_price">Price</string>
    <string name="label_supplier">Supplier</string>
    <string name="label_supplier_phone">Supplier  Phone</string>
</resources>
