<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!--Labels TextViews-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="97dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/label_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_author"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:text="@string/label_quantity"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_price"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:text="@string/label_supplier"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:text="@string/label_supplier_phone"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <!--Values EditTexts-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_book_name"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <EditText
            android:id="@+id/author_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_author"
            android:imeOptions="actionDone"
            android:inputType="text" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_quantity_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/button_decrement"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/quantity_number_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_0" />

            <Button
                android:id="@+id/increment_quantity_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/button_increment"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/values_euro"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/supplier_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_supplier_name"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/supplier_phone_nr_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="2"
                android:digits="0123456789"
                android:hint="@string/hint_supplier_phone_nr"
                android:imeOptions="actionDone"
                android:inputType="phone" />

            <Button
                android:id="@+id/phone_call_button"
                android:layout_width="10dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/ic_action_phone_start" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>